# talgo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
strategies/: example_momentum.py
talgo/: __init__.py  download.py
talgo/analysis/: __init__.py  metrics.py
talgo/backtest/: __init__.py  engine.py
talgo/strategy/: base.py
talgo/utils/: config.py
tests/: test_loader.py
