[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talgo"
version = "0.1.0"
description = "Crypto quantitative trading strategies framework"
requires-python = ">=3.11"
dependencies = [
    "lakeapi",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
research = [
    "jupyterlab>=4.0",
    "plotly>=5.0",
    "matplotlib>=3.8",
]
backtest = [
    "vectorbt>=0.26",
    "quantstats>=0.0.62",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
